--- a/Theater.csproj
+++ b/Theater.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TAfisha_dates.cs" />
     <Compile Include="TUsers.cs" />
     <Compile Include="User.cs" />
     <Page Include="Afisha.xaml">
