--- a/Theater.csproj
+++ b/Theater.csproj
@@ -89,7 +89,11 @@
     <Compile Include="Authorization.xaml.cs">
       <DependentUpon>Authorization.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DayButtonProperties.cs" />
     <Compile Include="DB_connection.cs" />
+    <Compile Include="Performance.xaml.cs">
+      <DependentUpon>Performance.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Performance_list.xaml.cs">
       <DependentUpon>Performance_list.xaml</DependentUpon>
     </Compile>
@@ -120,6 +124,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Performance.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Performance_list.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -185,6 +193,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\pass-afisha.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\reverse-small.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
