--- a/Theater.csproj
+++ b/Theater.csproj
@@ -91,6 +91,9 @@
     </Compile>
     <Compile Include="DayButtonProperties.cs" />
     <Compile Include="DB_connection.cs" />
+    <Compile Include="My_Account.xaml.cs">
+      <DependentUpon>My_Account.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Performance.xaml.cs">
       <DependentUpon>Performance.xaml</DependentUpon>
     </Compile>
@@ -135,6 +138,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="My_Account.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Performance.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -143,9 +150,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PopupBoxDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Registration.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\tickets.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Scene.xaml">
       <SubType>Designer</SubType>
