Login and Password change

--- a/Theater.csproj
+++ b/Theater.csproj
@@ -90,19 +90,24 @@
       <DependentUpon>Authorization.xaml</DependentUpon>
     </Compile>
     <Compile Include="ChangeLoginHandler.cs" />
+    <Compile Include="ChangePasswordHandler.cs" />
     <Compile Include="ChangePersonalInfoControl.xaml.cs">
       <DependentUpon>ChangePersonalInfoControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="DayButtonProperties.cs" />
     <Compile Include="DB_connection.cs" />
-    <Compile Include="InfoChangeHandler.cs" />
+    <Compile Include="LoginChangeHandler.cs" />
     <Compile Include="LoginChangeReciever.cs" />
     <Compile Include="LoginExistsHandler.cs" />
     <Compile Include="NoChangesHandler.cs" />
     <Compile Include="My_Account.xaml.cs">
       <DependentUpon>My_Account.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PasswordChangeHandler.cs" />
     <Compile Include="PasswordChangeReciever.cs" />
+    <Compile Include="PasswordConfirmationHandler.cs" />
+    <Compile Include="PasswordStringsFilledHandler.cs" />
+    <Compile Include="PasswordValidationHandler.cs" />
     <Compile Include="Performance.xaml.cs">
       <DependentUpon>Performance.xaml</DependentUpon>
     </Compile>
@@ -129,7 +134,7 @@
     </Compile>
     <Compile Include="SeatClickedEventArgs.cs" />
     <Compile Include="SeatInfo.cs" />
-    <Compile Include="StringsFilledHandler.cs" />
+    <Compile Include="LoginStringsFilledHandler.cs" />
     <Compile Include="TAfisha.cs" />
     <Compile Include="TAfisha_dates.cs" />
     <Compile Include="TAfisha_SeatsPrices.cs" />
